--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "module": "./dist/es/index.js",
   "scripts": {
     "prepare": "modern build && husky install",
+    "preview": "rspress preview",
     "dev": "modern dev",
     "build": "modern build",
     "build:watch": "modern build -w",
@@ -17,7 +18,8 @@
     "gen-release-note": "modern gen-release-note",
     "release": "modern release",
     "new": "modern new",
-    "upgrade": "modern upgrade"
+    "upgrade": "modern upgrade",
+    "test": "modern test"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,mjs,cjs}": [
@@ -28,15 +30,23 @@
     "node_modules/",
     "dist/"
   ],
-  "dependencies": {},
-  "peerDependencies": {},
+  "dependencies": {
+    "@modern-js/plugin-tailwindcss": "2.45.0"
+  },
+  "peerDependencies": {
+    "tailwindcss": "~3.3.3"
+  },
   "devDependencies": {
     "@modern-js/module-tools": "2.45.0",
     "@modern-js/eslint-config": "2.45.0",
     "rimraf": "~3.0.2",
     "lint-staged": "~13.1.0",
     "prettier": "~2.8.1",
-    "husky": "~8.0.1"
+    "husky": "~8.0.1",
+    "tailwindcss": "~3.3.3",
+    "@modern-js/plugin-rspress": "1.9.3",
+    "@modern-js/plugin-testing": "2.45.0",
+    "@types/jest": "~29.2.4"
   },
   "sideEffects": [],
   "publishConfig": {
