--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "test-lib-npm",
+  "name": "modern-rspress-component",
   "version": "0.1.0",
   "main": "./dist/lib/index.js",
   "module": "./dist/es/index.js",
   "scripts": {
-    "prepare": "modern build && husky install",
     "preview": "rspress preview",
     "dev": "modern dev",
+    "dev-vite": "vite dev",
     "build": "modern build",
     "build:watch": "modern build -w",
     "reset": "rimraf ./**/node_modules",
-    "lint": "modern lint",
     "change": "modern change",
     "bump": "modern bump",
     "pre": "modern pre",
@@ -21,32 +20,33 @@
     "upgrade": "modern upgrade",
     "test": "modern test"
   },
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx,mjs,cjs}": [
-      "node --max_old_space_size=8192 ./node_modules/eslint/bin/eslint.js --fix --color --cache --quiet"
-    ]
-  },
   "eslintIgnore": [
     "node_modules/",
     "dist/"
   ],
   "dependencies": {
-    "@modern-js/plugin-tailwindcss": "2.45.0"
+    "@modern-js/plugin-tailwindcss": "2.45.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "peerDependencies": {
     "tailwindcss": "~3.3.3"
   },
   "devDependencies": {
-    "@modern-js/module-tools": "2.45.0",
     "@modern-js/eslint-config": "2.45.0",
-    "rimraf": "~3.0.2",
-    "lint-staged": "~13.1.0",
-    "prettier": "~2.8.1",
-    "husky": "~8.0.1",
-    "tailwindcss": "~3.3.3",
+    "@modern-js/module-tools": "2.45.0",
     "@modern-js/plugin-rspress": "1.9.3",
     "@modern-js/plugin-testing": "2.45.0",
-    "@types/jest": "~29.2.4"
+    "@types/jest": "~29.2.4",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "lint-staged": "~13.1.0",
+    "prettier": "~2.8.1",
+    "rimraf": "~3.0.2",
+    "tailwindcss": "~3.3.3",
+    "vite": "^5.0.11"
   },
   "sideEffects": [],
   "publishConfig": {
